--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -1,1 +1,76 @@
-<p>overlay-contacts works!</p>
+<section class="background-overlay">
+    <div class="content">
+        <div class="overlay-add-contact">
+            <div class="d-flex">
+                <div class="add-contact">
+                    <div class="center-contact">
+                        <img
+                            src="assets/img/add-contacts/join-logo.svg"
+                            alt=""
+                        />
+                        <h2>Add contact</h2>
+                        <span
+                            >Task are better with a team!
+                            <div class="blue-line"></div>
+                        </span>
+                    </div>
+                </div>
+                <div class="user-data">
+                    <div class="close-image">
+                        <img src="assets/img/add-contacts/Vector.svg" alt="" />
+                    </div>
+                    <div class="user-image">
+                        <img
+                            src="assets/img/add-contacts/user-image.svg"
+                            alt=""
+                        />
+                    </div>
+                    <div class="user-contact-data">
+                        <form class="contact-form">
+                            <input
+                                class="user"
+                                type="text"
+                                placeholder="Name"
+                                name="name"
+                                required
+                            />
+
+                            <input
+                                class="mail"
+                                type="email"
+                                placeholder="Email"
+                                name="email"
+                                required
+                            />
+
+                            <input
+                                class="phone"
+                                type="tel"
+                                placeholder="Phone"
+                                name="phone"
+                                required
+                            />
+                        </form>
+
+                        <div class="cancel-create-contact">
+                            <button class="cancel">
+                                <span>Cancel</span>
+                                <img
+                                    src="assets/img/add-contacts/Vector.svg"
+                                    alt=""
+                                />
+                            </button>
+                            <button class="create">
+                                <span>Create contact</span>
+                                <img
+                                    src="assets/img/add-contacts/check.svg"
+                                    alt=""
+                                />
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
