--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,1 +1,33 @@
-<p>contact-list works!</p>
+<section>
+
+  <div class="content">
+    <div class="new-contact">
+      <button class="add-button">Add new contact <img
+          src="../../../assets/images/contactList/personAddIcon.png"></button>
+    </div>
+
+    <div class="user-profiles-container">
+      @for (user of contactData; track $index) {
+      @if ($index === 0 || user.firstName.charAt(0).toUpperCase() !==
+      contactData[$index-1].firstName.charAt(0).toUpperCase()) {
+      <div class="letter-heading-container">
+        <h2 class="letter-heading">{{ user.firstName.charAt(0).toUpperCase() }}</h2>
+      </div>
+      }
+      <div class="user-profile">
+        <div class="initials">
+          {{user.initials}}
+        </div>
+
+        <div class="user-details">
+          <h3 class="user-name">{{user.firstName}} {{user.lastName}}</h3>
+          <p class="user-mail">{{user.email}}</p>
+        </div>
+      </div>
+      }
+    </div>
+
+
+
+  </div>
+</section>
