--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -1,8 +1,14 @@
 <section class="background-overlay">
     <div class="content">
-        <div class="overlay-add-contact">
+        <div class="overlay-contact">
+            <div class="mobile-image">
+                <img src="assets/img/add-contacts/user-image.svg" alt="">
+            </div>
             <div class="d-flex">
                 <div class="add-contact">
+                    <div class="mobile-close">
+                        <img src="assets/img/add-contacts/mobile-close.svg" alt="">
+                    </div>
                     <div class="center-contact">
                         <img
                             src="assets/img/add-contacts/join-logo.svg"
