--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,35 +18,39 @@
 }
 /* inter-100 - latin */
 @font-face {
-    font-display: swap; 
+    font-display: swap;
     font-family: "Inter";
     font-style: normal;
     font-weight: 100;
-    src: url("./../public/assets/fonts/inter-v19-latin-100.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-100.woff2")
+        format("woff2");
 }
 /* inter-200 - latin */
 @font-face {
-    font-display: swap; 
+    font-display: swap;
     font-family: "Inter";
     font-style: normal;
     font-weight: 200;
-    src: url("./../public/assets/fonts/inter-v19-latin-200.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-200.woff2")
+        format("woff2");
 }
 /* inter-300 - latin */
 @font-face {
-    font-display: swap; 
+    font-display: swap;
     font-family: "Inter";
     font-style: normal;
     font-weight: 300;
-    src: url("./../public/assets/fonts/inter-v19-latin-300.woff2") format("woff2");
+    src: url("./../public/assets/fonts/inter-v19-latin-300.woff2")
+        format("woff2");
 }
 /* inter-500 - latin */
 @font-face {
-    font-display: swap; 
+    font-display: swap;
     font-family: "Inter";
     font-style: normal;
     font-weight: 500;
-    src: url("./../public/assets/fonts/inter-v19-latin-500.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-500.woff2")
+        format("woff2");
 }
 /* inter-700 - latin */
 @font-face {
@@ -54,7 +58,8 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
-    src: url("./../public/assets/fonts/inter-v19-latin-700.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-700.woff2")
+        format("woff2");
 }
 /* inter-800 - latin */
 @font-face {
@@ -62,25 +67,26 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 800;
-    src: url("./../public/assets/fonts/inter-v19-latin-800.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-800.woff2")
+        format("woff2");
 }
 /* inter-900 - latin */
 @font-face {
-    font-display: swap; 
+    font-display: swap;
     font-family: "Inter";
     font-style: normal;
     font-weight: 900;
-    src: url("./../public/assets/fonts/inter-v19-latin-900.woff2") format("woff2"); 
+    src: url("./../public/assets/fonts/inter-v19-latin-900.woff2")
+        format("woff2");
 }
 
 header,
-section,
 footer {
     display: flex;
     justify-content: center;
     width: 100%;
-    .content {
-        width: 100%;
-        max-width: 1980px;
-    }
+}
+.content {
+    width: 100%;
+    max-width: 1980px;
 }
