updated path for contact list Image

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -3,7 +3,7 @@
   <div class="content">
     <div class="new-contact">
       <button class="add-button">Add new contact <img
-          src="../../../assets/images/contactList/personAddIcon.png"></button>
+          src="assets/img/contactList/personAddIcon.png"></button>
     </div>
 
     <div class="user-profiles-container">
