--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,8 +79,7 @@
     src: url("./../public/assets/fonts/inter-v19-latin-900.woff2")
         format("woff2");
 }
-<<<<<<< Updated upstream
-
+/* 
 header,
 footer {
     display: flex;
@@ -91,5 +90,8 @@ footer {
     width: 100%;
     max-width: 1980px;
 }
-=======
->>>>>>> Stashed changes
+ */
+
+.hidden {
+    display: none;
+}
