Nav + Footer Creation
Styling and positioning, added graphics, buttons, hover-effects and highlight for selected page.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<section>
+    <header>
+        <div class="kanban">Kanban Project Management Tool</div>
+        <div class="menu">
+            <div class="help"></div>
+            <span>HA</span>
+        </div>
+    </header>
+</section>
