--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -28,7 +28,7 @@ section {
             align-items: center;
 
             .help {
-                background: url('./../../../public/assets/header/help-hover.png');
+                background: url('./../../../../public/assets/images/header/help-hover.png');
                 background-size: contain;
                 background-repeat: no-repeat;
                 height: 1.5rem;
@@ -36,7 +36,7 @@ section {
                 margin-right: 0.5rem;
 
                 &:hover {
-                    background: url('./../../../public/assets/header/help.png');
+                    background: url('./../../../../public/assets/images/header/help.png');
                     background-size: contain;
                     background-repeat: no-repeat;
                     cursor: pointer;
