--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -1,14 +1,14 @@
 <section>
     <div class="not-footer">
         <div class="logo">
-        <img src="assets/navbar/Join logo vector.png" alt="">
+        <img src="assets/images/navbar/Join logo vector.png" alt="">
     </div>
     <nav>
         <ul>
-            <li><img src="assets/navbar/Summary.png" alt="">Summary</li>
-            <li><img src="assets/navbar/Add task.png" alt="">Add Task</li>
-            <li><img src="assets/navbar/Board.png" alt="">Board</li>
-            <li class="active"><img src="assets/navbar/Contacts.png" alt="">Contacts</li>
+            <li><img src="assets/images/navbar/Summary.png" alt="">Summary</li>
+            <li><img src="assets/images/navbar/Add task.png" alt="">Add Task</li>
+            <li><img src="assets/images/navbar/Board.png" alt="">Board</li>
+            <li class="active"><img src="assets/images/navbar/Contacts.png" alt="">Contacts</li>
         </ul>
     </nav>
     </div>
