--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -43,7 +43,7 @@ section {
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
-                    font-size: 1.3rem;
+                    font-size: 1rem;
                     font-weight: lighter;
                     padding: 0.5rem;
                     width: 100%;
@@ -64,6 +64,7 @@ section {
                 .active {
                     color: #FFFFFF;
                     background: #091931;
+                    font-weight: normal;
 
                     img {
                         opacity: 1;
@@ -86,7 +87,7 @@ section {
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-end;
-        font-size: 1.2rem;
+        font-size: 1rem;
 
         a {
             color: white;
@@ -95,7 +96,7 @@ section {
 
             &:hover {
                 opacity: 1;
-                font-size: 1.3rem;
+                font-size: 1.1rem;
                 color: #29ABE2;
             }
         }
