--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -6,8 +6,7 @@
     </div>
     <div class="user-profiles-container">
       @for (user of contactData; track $index) {
-        @if ($index === 0 || user.firstName.charAt(0).toUpperCase() !==
-          contactData[$index-1].firstName.charAt(0).toUpperCase()) {
+        @if ($index === 0 || user.firstName.charAt(0).toUpperCase() !== contactData[$index-1].firstName.charAt(0).toUpperCase()) {
               <div class="letter-heading-container">
                 <h2 class="letter-heading">{{ user.firstName.charAt(0).toUpperCase() }}</h2>
               </div>
