--- a/src/app/contacts/contact-list/contact-list.component.scss
+++ b/src/app/contacts/contact-list/contact-list.component.scss
@@ -1,126 +1,126 @@
 section {
-  font-size: 10px;
-  /*     width: 400px;
- */
-  height: 928px;
-  overflow-y: auto;
+    font-size: 10px;
+    width: 400px;
+    height: 928px;
+    overflow-y: auto;
 
-  .content {}
+    .content {
+    }
 
-  .new-contact {
-    z-index: 1;
-    width: 100%;
-    height: 9em;
-    background-color: white;
-    position: sticky;
-    top: 0px;
+    .new-contact {
+        z-index: 1;
+        width: 100%;
+        height: 9em;
+        background-color: white;
+        position: sticky;
+        top: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .add-button {
+        gap: 1em;
+        cursor: pointer;
+        border: none;
+        border-radius: 10px;
+        font-size: 21px;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 56px;
+        background-color: #2a3647;
+
+        &:hover {
+            background-color: #29abe2;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+
+        img {
+            width: 32px;
+            height: 32px;
+        }
+    }
+}
+
+.user-profiles-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
 
-  .add-button {
-    gap: 1em;
-    cursor: pointer;
-    border: none;
-    border-radius: 10px;
-    font-size: 21px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 56px;
-    background-color: #2a3647;
-
-    &:hover {
-      background-color: #29abe2;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    .letter-heading-underline {
+        width: 90%;
+        border-bottom: 1.5px solid rgb(207, 207, 207);
+        margin-bottom: 0.7em;
     }
-
-    img {
-      width: 32px;
-      height: 32px;
-    }
-  }
-}
-
-.user-profiles-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
-  .letter-heading-underline {
-    width: 90%;
-    border-bottom: 1.5px solid rgb(207, 207, 207);
-    margin-bottom: 0.7em;
-  }
 }
 
 .letter-heading-container {
-  width: 100%;
-  padding-left: 4em;
+    width: 100%;
+    padding-left: 4em;
 
-  .letter-heading {
-    margin: 1em 0em;
-    font-weight: 500;
-    font-size: 2em;
-  }
+    .letter-heading {
+        margin: 1em 0em;
+        font-weight: 500;
+        font-size: 2em;
+    }
 }
 
 .user-profile {
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  flex-wrap: nowrap;
-  width: 90%;
-  height: 78px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding-left: 1em;
-
-  &:hover {
-    background: linear-gradient(to bottom, #ededed30, #e7e7e7);
-    border-radius: 0.8em;
-  }
-
-  &.active {
-    color: white;
-    background: #2a3647;
-    border-radius: 0.8em;
-  }
-
-  .initials {
-    font-size: 1.2em;
-    margin-right: 8%;
-    color: white;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    flex-wrap: nowrap;
+    width: 90%;
+    height: 78px;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    background-color: rgb(random(256), random(256), random(256));
-    height: 42px;
-    width: 42px;
-    border-radius: 50px;
-  }
+    padding-left: 1em;
 
-  .user-name {
-    font-size: 2em;
-    font-weight: 400;
-  }
+    &:hover {
+        background: linear-gradient(to bottom, #ededed30, #e7e7e7);
+        border-radius: 0.8em;
+    }
 
-  .user-mail {
-    font-size: 1.6em;
+    &.active {
+        color: white;
+        background: #2a3647;
+        border-radius: 0.8em;
+    }
 
-    color: #007cee;
-  }
+    .initials {
+        font-size: 1.2em;
+        margin-right: 8%;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(random(256), random(256), random(256));
+        height: 42px;
+        width: 42px;
+        border-radius: 50px;
+    }
+
+    .user-name {
+        font-size: 2em;
+        font-weight: 400;
+    }
+
+    .user-mail {
+        font-size: 1.6em;
+
+        color: #007cee;
+    }
 }
 
 @media (max-width: 368px) {
-  section {
-    font-size: 9px;
-  }
+    section {
+        font-size: 9px;
+    }
 }
