--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,17 +3,13 @@ html {
 }
 
 section {
-    width: 100dvw;
     height: 8dvh;
-    position: absolute;
-    top: 0;
-    left: 0;
     box-shadow: 0 0.4rem 0.4rem -0.2rem rgba($color: #000000, $alpha: 0.2);
 
     header {
         width: 100%;
         height: 100%;
-        padding-left: 20rem;
+        padding: 0rem 5rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
