Feat&Style:  merged all components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-overlay-contacts></app-overlay-contacts>
-<app-header></app-header>
-<app-nav-footer></app-nav-footer>
-<app-contact-list></app-contact-list>
-<app-info-screen></app-info-screen> 
+<app-contacts></app-contacts>
 <router-outlet />
