--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,12 @@
-<app-contact-list></app-contact-list>
+<div class="main-content">
+  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+  <div class="main-content-input">
+    <app-header></app-header>
+    <div class="contact-list-content"> <app-overlay-contacts></app-overlay-contacts>
+      <app-contact-list class="contact-list-component"></app-contact-list>
+      <app-info-screen class="info-screen-component"></app-info-screen>
+    </div>
+
+  </div>
+
+</div>
