--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -1,4 +1,4 @@
-<section class="background-overlay" [class.hidden]="!overlayState.isActive">
+<section class="background-overlay" [class.hidden]="!overlayState.isActive" >
   <div class="content">
     <div class="overlay-contact">
       <div class="mobile-image">
@@ -10,12 +10,19 @@
           <div class="mobile-close" (click)="toggleOverlay()">
             <img src="assets/img/add-contacts/mobile-close.svg"/>
           </div>
-          <div class="center-contact">
+          <div  class="center-contact" >
             <img src="assets/img/add-contacts/join-logo.svg"/>
-            <h2>Add contact</h2>
-            <span>Task are better with a team!
-              <div class="blue-line"></div>
-            </span>
+            @switch (overlayState.AddOrEditState) {
+              @case ("addContact") {
+                <h2>Add contact</h2>
+                <span>Task are better with a team!
+                  <div class="blue-line"></div>
+                </span>
+              }
+              @case ("editContact") {
+                <h2>Edit contact</h2>
+              }
+            }
           </div>
         </div>
         
@@ -27,13 +34,13 @@
             <img src="assets/img/add-contacts/user-image.svg"/>
           </div>
           <div class="user-contact-data">
-            <form class="contact-form" >
+            <form class="contact-form"  #contactForm="ngForm">
               <input [(ngModel)]="newContact.firstName" class="user" type="text" placeholder="Name" name="name"
-                required />
+                required  pattern="[A-Za-zÄÖÜäöüß\s]{2,}" />
               <input [(ngModel)]="newContact.email" class="mail" type="email" placeholder="Email" name="email"
-                required />
+                required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" />
               <input [(ngModel)]="newContact.phone" class="phone" type="tel" placeholder="Phone" name="phone"
-                required />
+                required pattern="[0-9]{6,15}" />
             </form>
             <div class="cancel-create-contact">
               <button class="cancel">
@@ -41,6 +48,7 @@
                 <img src="assets/img/add-contacts/Vector.svg"/>
               </button>
               <button class="create"
+                [disabled]="!contactForm.valid" 
                 (click)="overlayState.addContacts(newContact); resetNewContactInput(); toggleOverlay()">
                 <span>Create contact</span>
                 <img src="assets/img/add-contacts/check.svg"/>
