--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <section>
     <header>
-        <div class="kanban">Kanban Project Management Tool</div>
+        <div class="kanban"></div>
         <div class="menu">
             <div class="help"></div>
             <span (click)="toggleDropDown()">HA</span>
