finished drop-down-menu responsive
added help button in menu, made help button only visible in mobile view, changed positioning for mobile-view

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,6 +7,7 @@
         </div>
     </header>
     <div id="drop-down" class="d-none">
+        <p id="help">Help</p>
         <p>Legal Notice</p>
         <p>Privacy Policy</p>
         <p>Log out</p>
