--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -1,6 +1,10 @@
 .main-content {
     display: flex;
     height: 100dvh;
+
+    @media (max-width:965px) {
+        height: 92dvh;
+    }
 }
 
 .main-content-input {
@@ -19,6 +23,7 @@
     display: flex;
     height: auto;
 }
+
 .info-screen-component {
     display: flex;
     height: auto;
