added animation & fixed responsive

--- a/src/app/contacts/contact-list/contact-list.component.scss
+++ b/src/app/contacts/contact-list/contact-list.component.scss
@@ -2,8 +2,11 @@ section {
     font-size: 10px;
     width: 400px;
     overflow-y: auto;
-        overflow-x: hidden;
+    overflow-x: hidden;
 
+    @media (max-width: 750px) {
+        display: none;
+    }
 
     .content {
         height: auto;
