--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -7,9 +7,13 @@ section {
     flex-direction: column;
     height: 100dvh;
     width: 15rem;
-    background: #2A3647;
+    background: #2a3647;
     z-index: 5;
     padding: 3rem 0;
+
+    @media (max-width: 965px) {
+        display: none;
+    }
 
     .not-footer {
         width: 100%;
@@ -32,8 +36,7 @@ section {
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
-                color: rgba($color: #FFFFFF, $alpha: 0.5);
-
+                color: rgba($color: #ffffff, $alpha: 0.5);
 
                 li {
                     display: flex;
@@ -47,7 +50,7 @@ section {
 
                     &:hover {
                         cursor: pointer;
-                        background: #2A3D59;
+                        background: #2a3d59;
                     }
 
                     img {
@@ -58,7 +61,7 @@ section {
                 }
 
                 .active {
-                    color: #FFFFFF;
+                    color: #ffffff;
                     background: #091931;
                     font-weight: normal;
 
@@ -92,10 +95,8 @@ section {
             &:hover {
                 opacity: 1;
                 font-size: 1.1rem;
-                color: #29ABE2;
+                color: #29abe2;
             }
         }
     }
-
-
 }
