Feat, Style implemented
Overlay-contact-component: added Form Validation if invalid --> error

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="content">
     <div class="new-contact">
-      <button (click)="toggleOverlay()  " class="add-button">Add new contact <img
+      <button (click)="toggleOverlay() + overlayState.AddOrEditState ='addContact' " class="add-button">Add new contact <img
           src="assets/img/contactList/personAddIcon.png"></button>
     </div>
     <div class="user-profiles-container">
