--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100dvh;
-    background-color: rgba(0, 0, 0, 0.072);
+    background-color: rgba(0, 0, 0, 0.205);
     font-size: 10px;
     @media (max-width: 1250px) {
         font-size: 9px;
@@ -138,9 +138,13 @@
                                 border: rgba(0, 0, 0, 0.109) 2px solid;
                                 transition: border 0.2s ease;
                             }
-                            input:focus {
+                            input:hover:required {
                                 border: #29abe2 2px solid;
                                 outline: none;
+                            }
+                            .invalid {
+                                border: 2px solid red;
+                                background-color: #ffe6e6;
                             }
                             .user {
                                 background: url("./../../../../public/assets/img/add-contacts/person.svg");
