changed div in button

--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -31,20 +31,20 @@
                     <div class="name-user">
                         <h2>Anton Mayer</h2>
                         <div class="edit-delete">
-                            <div class="edit">
+                            <button class="edit">
                                 <img
                                     src="./assets/images/edit.png"
                                     alt="edit"
                                 />
                                 <p>Edit</p>
-                            </div>
-                            <div class="delete">
+                            </button>
+                            <button class="delete">
                                 <img
                                     src="./assets/images/delete.png"
                                     alt="delete"
                                 />
                                 <p>Delete</p>
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
