edit button for Contact-info-page done

--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -31,7 +31,7 @@
                     <div class="name-user">
                         <h2>Anton Mayer</h2>
                         <div class="edit-delete">
-                            <button class="edit">
+                            <button class="edit" (click)="toggleOverlay() + overlayState.AddOrEditState ='editContact'">
                                 <img
                                     src="./assets/images/edit.png"
                                     alt="edit"
